--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,28 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud connection 1'
+    organization: 'space-game-web-333-davaizcorbe'
+    scannerMode: 'MSBuild'
+    projectKey: 'mslearn-tailspin-spacegame-web'
+    projectName: 'mslearn-tailspin-spacegame-web'
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+
+
+- task: SonarCloudAnalyze@1
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
 
 - task: VSTest@2
   inputs:
